	- Fix stack underflow in Pha Packer loader (CVE-2025-47256).
	- Slight performance improvements for the Oktalyzer and SFX loaders.
	- Fix broken conversion of ProRunner 2.0 pattern data.
	- xmp_set_tempo_factor no longer alters frame time calculation for
	  xmp_get_frame_info. Frame time is now updated to account for the
	  new time factor after calling xmp_scan_module.
	- Fix Poly Tracker pattern break hex parameter.
	- Fix Digital Tracker 2.03 position jump effect for 4 channel DTMs.
	- Fix pattern loop jump interactions with same row pattern jump/break:
	  Scream Tracker 3.03b+; Impulse Tracker 1.00 to 1.06 IT;
	  Impulse Tracker 2.00+ IT/S3M; Modplug Tracker 1.16 IT/XM/S3M;
	  Imago Orpheus IMF/S3M; Liquid Tracker LIQ/S3M; Poly Tracker;
	  Digital Tracker <=2.02 DTM/MOD; Digital Tracker 2.03 (partial);
	  Digital Tracker 1.9 (partial); Octalyser.
	Changes by Thomas Neumann:
	- Fix the pattern loop effect in Astroidea XMF loader.
	- Fix loading of Extreme Pinball modules.

4.6.2 (20250224):
	Changes by Alice Rowan:
	- Fix MED effect 1Fxy (delay and retrigger). The new implementation
	  supports both delay and retrigger at the same time and repeats.
	- Fix MED effect FF3 (revert change from 4.6.1). The buggy version
	  of this effect prior to OctaMED v5 is not currently supported.
	- Fix MED3 and MED4 time factor and tempos 1-10.
	- Fix MED4 effect 9xx (set speed).
	- Add support for MED3 and MED4 song files.
	- Better MED MMD tracker version fingerprinting.
	- Fix loading external instruments from the current directory.
	Changes by Thomas Neumann:
	- Fix oxm modules with empty samples (e.g.: The Four Ages.oxm)
	- Fix some modules would be misidentified as Scream Tracker 2.
	- Handle IT modules with edit history but no midi configuration
	Changes by Ozkan Sezer:
	- Revert a bad CVE fix to the miniz inflate code
	- Add missing HAVE_DIRENT definition to Android makefile.

4.6.1 (20250101):
	Changes by Claudio Matsuoka:
	- The full library is now under MIT license